--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.0",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scripts": "latest",
+    "remarkable": "2.0.1",
+    "react-icons": "^4.8.0",
+    "sass": "^1.60.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.0"
   }
 }
