--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://rbc6ek0rmjhfsg61uhsq:pscale_pw_eyYFVlaZZV9caI2orb2gdyzSyDqeBzXubUOhjCqhvS7@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
+DATABASE_URL='mysql://81ak4pf53oomflqxbcgw:pscale_pw_aYNfR7r0Q1BZmYFB3gkfhuKqPaOcil5H3HsckCNhUHQ@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
