vendo oq da o middleware

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://81ak4pf53oomflqxbcgw:pscale_pw_aYNfR7r0Q1BZmYFB3gkfhuKqPaOcil5H3HsckCNhUHQ@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
+DATABASE_URL='mysql://qodscydn7rrbiyw4oo6g:pscale_pw_iCc466DmUu5riOMNiqyu3QqBhU6vVIR4XHpVdqKGEW3@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
