--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://qodscydn7rrbiyw4oo6g:pscale_pw_iCc466DmUu5riOMNiqyu3QqBhU6vVIR4XHpVdqKGEW3@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
+DATABASE_URL='mysql://n4uzgs8j4lyzbhc2hefe:pscale_pw_kKrBiMVoQ3O2KkOPDVKcY9gxFAV9Ag5hHmtQfvDXEHf@aws.connect.psdb.cloud/precos_v2?sslaccept=strict'
