--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "cors": "^2.8.5",
     "md5": "^2.3.0",
     "mysql2": "^3.2.0",
     "next": "13.2.4",
