--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "async": "^3.2.4",
+    "browserify-fs": "^1.0.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "next": "13.2.4",
+    "object-keys": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "latest",
     "remarkable": "2.0.1",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "uint8-to-base64": "^0.2.0"
   },
   "devDependencies": {
     "prisma": "^4.14.0"
