--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "async": "^3.2.4",
     "browserify-fs": "^1.0.0",
     "cors": "^2.8.5",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "md5": "^2.3.0",
+    "merge-descriptors": "^2.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
-    "next": "13.2.4",
+    "next": "^14.0.4",
     "object-keys": "^1.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "latest",
+    "react-scripts": "^3.0.1",
     "remarkable": "2.0.1",
     "sass": "^1.60.0",
     "uint8-to-base64": "^0.2.0"
